# admiral

./: Cargo.toml  README.md  flake.nix
resources/: admiral.desktop  com.github.Admiral.desktop
src/: auth.rs  emotes.rs  main.rs
