[package]
name = "admiral"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[profile.release]
opt-level = 3      # Optimization level (0-3, 's', 'z')
# lto = "thin"       # Link-time optimization ("off", "thin", "fat")
# codegen-units = 1  # Number of code generation units (smaller is often better for LTO)
strip = "symbols"  # Strip symbols from the binary ("none", "symbols", "debuginfo")

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_12"] }
glib = "0.20.9"
gio = "0.20.9"
tokio = { version = "1.44.0", features = ["full"] }
twitch-irc = "5.0.1"
chrono = "0.4.40"
dirs = "6.0.0"
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
shellexpand = "3.1.0"
libsecret = "0.7.0"
keyring = "3.6.2"
open = "5.3.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
